--- a/.github/workflows/sast.yml
+++ b/.github/workflows/sast.yml
@@ -1,19 +1,28 @@
 name: SAST CodeQL Scan
 on: [push, pull_request]
+
 jobs:
   codeql:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+
       - name: Initialize CodeQL
-        uses: github/codeql-action/init@v2
+        uses: github/codeql-action/init@v3
         with:
           languages: java
+
       - name: Autobuild
-        uses: github/codeql-action/autobuild@v2
+        uses: github/codeql-action/autobuild@v3
+
       - name: Run CodeQL analysis
-        uses: github/codeql-action/analyze@v2
-      - name: Upload SARIF results
-        uses: github/codeql-action/upload-sarif@v2
+        id: analyze
+        uses: github/codeql-action/analyze@v3
         with:
-          sarif_file: codeql-results.sarif
+          output: sarif-results
+
+      - name: Upload SARIF results as artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: codeql-sarif
+          path: sarif-results/*.sarif
