--- a/.github/workflows/sca.yml
+++ b/.github/workflows/sca.yml
@@ -7,6 +7,12 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          distribution: temurin
+          java-version: 17
+
       - name: Run Snyk SCA
         uses: snyk/actions/maven@master
         with:
