--- a/.github/workflows/sca.yml
+++ b/.github/workflows/sca.yml
@@ -7,14 +7,8 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Set up JDK 17
-        uses: actions/setup-java@v4
-        with:
-          distribution: temurin
-          java-version: 17
-
-      - name: Run Snyk SCA
-        uses: snyk/actions/maven@master
+      - name: Run Snyk SCA (Gradle)
+        uses: snyk/actions/gradle@master
         with:
           args: --json-file-output=results-sca.json
         env:
