--- a/.github/workflows/sast.yml
+++ b/.github/workflows/sast.yml
@@ -1,28 +1,23 @@
-name: SAST CodeQL Scan
-on: [push, pull_request]
-
+name: Semgrep SAST Scan
+ 
+on:
+  push:
+    branches: [ "master" ]
+ 
 jobs:
-  codeql:
+  semgrep-sast:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-
-      - name: Initialize CodeQL
-        uses: github/codeql-action/init@v3
-        with:
-          languages: java
-
-      - name: Autobuild
-        uses: github/codeql-action/autobuild@v3
-
-      - name: Run CodeQL analysis
-        id: analyze
-        uses: github/codeql-action/analyze@v3
-        with:
-          output: sarif-results
-
-      - name: Upload SARIF results as artifact
+      - name: Checkout repo
+        uses: actions/checkout@v4
+ 
+      - name: Run Semgrep SAST
+        run: |
+          pip install semgrep
+          semgrep --config=auto --json > semgrep-report.json
+ 
+      - name: Upload Semgrep results
         uses: actions/upload-artifact@v4
         with:
-          name: codeql-sarif
-          path: sarif-results/*.sarif
+          name: semgrep-sast-report
+          path: semgrep-report.json
